--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -1,1 +1,11 @@
-<p>reminder works!</p>
+<div class="reminder">
+    <input
+    #reminderTitleInput
+    type="text"
+    [value]="reminder.title"
+    />
+    <button class="flag">
+        test
+    </button>
+    <!-- date -->
+</div>
