--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,11 @@
 <toolbar></toolbar>
+<div class= "content" role="main">
+    <app-board>
+    </app-board>
+</div>
 
 
 
 <router-outlet></router-outlet>
+
+
