--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,14 @@
 body {
   margin: 0;
 }
+
+input {
+  border: none;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+}
+
+input:focus {
+  outline:none!important;
+}
