--- a/frontend/src/lib/ui/toolbar/toolbar.component.html
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.html
@@ -1,9 +1,10 @@
 <div class="toolbar" role="banner">
+    <div class="title">
+        {{title}}
     <img
-            width="60"
             alt="Toolbar Logo"
-            src="/assets/boardToolbar.svg"
+            src="/assets/poro2.png"
     />
-    <span>{{title}}</span>
-    <div class="spacer"></div>
+</div>
+<!--    <div class="spacer"></div>-->
 </div>
