--- a/frontend/src/lib/ui/toolbar/toolbar.component.scss
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.scss
@@ -1,21 +1,30 @@
-.spacer {
-  flex: 1;
-}
+//.spacer {
+//  flex: 1;
+//}
 
 .toolbar {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 80px;
   display: flex;
   align-items: center;
-  background-color: #2b4645;
-  color: #ffffff;
+  background-color: transparent;
+  color: #000000;
   font-weight: 600;
 }
 
 .toolbar img {
-  margin: 0 16px;
+  float: left;
+  margin: 0 15px;
+  width: 50px;
+}
+
+.title {
+  font-family: Algerian;
+  font-size: 40px;
+  margin: auto;
+  float: right;
 }
 
