added some structure and css

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,7 @@
 <toolbar></toolbar>
 
 <div class= "content" role="main">
-    <app-board>
-    </app-board>
+    <app-board></app-board>
 </div>
 
 
