--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -6,44 +6,97 @@
   background: transparent;
   color: #000000;
   font-family: Arial;
+  display: flex;
+  flex-direction: row;
 }
-.box {
+
+no-padding {
+  padding: 0;
+}
+
+.overview {
+  width: 400px;
+  margin-right: 100px;
+  border: 1px black solid;
+  border-radius: 10px;
+  padding: 20px 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-container {
   float: left;
 }
-.list-card {
-  border-radius: 4px;
-  border: 1px solid rgba(238, 238, 238, 0.55);
-  background-color: #fafafa;
-  height: 20px;
-  width: 200px;
-  margin: 0 8px 16px; // changed margin
-  padding: 16px;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-in-out;
-}
 
-.box {
+
+.filter-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
-.counter {
-  border-width: 1px;
-  border-style: solid;
-  border-color: black;
-  border-radius: 20px;
-  width: 145px;
-  img{
+.filter-button {
+  margin-right: 20px;
+  width: 165px;
+
+  img {
     width: 30px;
     margin: 0 10px;
   }
-  h4 {
-    cursor: help;         //for fun :D
+
+  button {
+    //cursor: help; //for fun :D
     color: black;
     font-family: Arial;
+    font-size: 20px;
     text-align: center;
+    background-color: transparent;
+    border: 1px black solid;
+    border-radius: 10px;
+    width: 100%;
+    padding: 5px 10px 5px 10px;
+    transition: 0.1s;
+    transition-timing-function: ease-in-out;
+  }
+
+  button:hover {
+    transform: translateY(-4px);
   }
 }
+
+.lists {
+  border: 1px black solid;
+  border-radius: 10px;
+  padding: 20px 10px 20px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list-card {
+  border-radius: 4px;
+  border: 1px solid black;
+  background-color: white;
+  height: 20px;
+  width: 280px;
+  margin: 0;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  transition: all 0.2s ease-in-out;
+}
+
+.plus-btn {
+  color: black;
+  background-color: transparent;
+  border: 1px black solid;
+  border-radius: 50px;
+  transition: 0.1s;
+  transition-timing-function: ease-in-out;
+}
+
+.plus-btn:hover {
+  transform: translateY(-4px);
+}
+
 
