fixed list-container overflow bug

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -10,11 +10,14 @@
             </div>
         </div>
 
-        <div class="lists">
-            <ul class="no-padding">
-                <li class="list-card">Something</li>
-                <li class="list-card">Something else</li>
-            </ul>
+        <div class="list-container">
+            <div class="list-card"><input /> </div>
+            <div class="list-card"><input /></div>
+            <div class="list-card"><input /></div>
+            <div class="list-card"><input /></div>
+            <div class="list-card"><input /></div>
+            <div class="list-card"><input /></div>
+            <div class="list-card"><input /></div>
             <button class="plus-btn">+</button> <!-- placeholder -->
         </div>
     </div>
