--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -10,16 +10,25 @@
             </div>
         </div>
 
-        <div class="list-container">
-            <div class="list-card"><input /> </div>
-            <div class="list-card"><input /></div>
-            <div class="list-card"><input /></div>
-            <div class="list-card"><input /></div>
-            <div class="list-card"><input /></div>
-            <div class="list-card"><input /></div>
-            <div class="list-card"><input /></div>
-            <button class="plus-btn">+</button> <!-- placeholder -->
+        <div class="lists">
+            <ul class="no-padding">
+                <li class="list-card">Something</li>
+                <li class="list-card">Something else</li>
+            </ul>
+            <!-- placeholder -->
         </div>
+        <button class="plus-btn"><img src="/assets/plus.png"/></button>
+
+<!--        <div class="lists">-->
+<!--            <ul class="no-padding">-->
+<!--                <li class="list-card">Something</li> <img src="/assets/markFalse.png" width="30px"/>-->
+<!--            </ul>-->
+<!--            <div class="flag-button">-->
+<!--                <button><img src="/assets/markFalse.png"></button>-->
+<!--            </div>-->
+<!--            <button class="plus-btn"><img src="/assets/plus.png"/></button> &lt;!&ndash; placeholder &ndash;&gt;-->
+<!--        </div>-->
+
     </div>
 
     <div class="list" *ngIf="currentList">
