--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -40,6 +40,7 @@ no-padding {
   margin-right: 20px;
   width: 165px;
 
+
   img {
     width: 30px;
     margin: 0 10px;
@@ -62,6 +63,7 @@ no-padding {
 
   button:hover {
     transform: translateY(-4px);
+    box-shadow: 5px 5px 5px rgba(94, 15, 15, 0.39);
   }
 }
 
@@ -86,6 +88,8 @@ no-padding {
   flex-direction: row;
   justify-content: space-between;
   transition: all 0.2s ease-in-out;
+  float: left;
+  list-style: none;
 }
 
 .list-card input {
@@ -95,16 +99,35 @@ no-padding {
 }
 
 .plus-btn {
-  color: black;
-  background-color: transparent;
-  border: 1px black solid;
-  border-radius: 50px;
+  //color: black;
+  //background-color: transparent;
+  //border: 1px black solid;
+  //border-radius: 50px;
+  padding: 0;
+  border: none;
+  background: none;
   transition: 0.1s;
   transition-timing-function: ease-in-out;
+
+  img{
+    width: 30px;
+  }
 }
 
 .plus-btn:hover {
   transform: translateY(-4px);
+}
+
+.flag-button {
+  padding: 0;
+  border: none;
+  background: none;
+  transition: 0.1s;
+  transition-timing-function: ease-in-out;
+  float: left;
+  img {
+    width: 30px;
+  }
 }
 
 
