added edit button

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -10,14 +10,10 @@
             </div>
         </div>
 
-        <div class="lists">
-            <ul class="no-padding">
-                <li class="list-card">Something</li>
-                <li class="list-card">Something else</li>
-            </ul>
-            <!-- placeholder -->
+        <div class="list-container">
+            <div class="list-card"><input/><button ><img src="/assets/editicon.svg"/></button></div>
+            <button class="plus-btn"><img src="/assets/plus.png"/></button>
         </div>
-        <button class="plus-btn"><img src="/assets/plus.png"/></button>
 
 <!--        <div class="lists">-->
 <!--            <ul class="no-padding">-->
