--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -11,25 +11,13 @@
         </div>
 
         <div class="list-container">
-            <div class="list-card"><input/><button ><img src="/assets/editicon.svg"/></button></div>
+            <div class="list-card" *ngFor="let list of board.lists"><input type="text" [(ngModel)]="list.title"/><button ><img src="/assets/editicon.svg"/></button></div>
             <button class="plus-btn"><img src="/assets/plus.png"/></button>
         </div>
-
-<!--        <div class="lists">-->
-<!--            <ul class="no-padding">-->
-<!--                <li class="list-card">Something</li> <img src="/assets/markFalse.png" width="30px"/>-->
-<!--            </ul>-->
-<!--            <div class="flag-button">-->
-<!--                <button><img src="/assets/markFalse.png"></button>-->
-<!--            </div>-->
-<!--            <button class="plus-btn"><img src="/assets/plus.png"/></button> &lt;!&ndash; placeholder &ndash;&gt;-->
-<!--        </div>-->
-
     </div>
 
-    <div class="list" *ngIf="currentList">
-
-
+    <div *ngIf="currentList">
+        <app-list [list]="this.currentList"></app-list>
     </div>
 
 <!--    <div class="lists">-->
