--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -1,11 +1,5 @@
 <div class="reminder">
-    <input
-    #reminderTitleInput
-    type="text"
-    [value]="reminder.title"
-    />
-    <button class="flag">
-        test
-    </button>
-    <!-- date -->
+    <input class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
+    <button class="date">test</button>
+    <button class="flag">test</button>
 </div>
