--- a/frontend/src/app/reminder/reminder.component.scss
+++ b/frontend/src/app/reminder/reminder.component.scss
@@ -1,4 +1,46 @@
 
 .reminder {
+  width: 580px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
 
+}
+
+.reminder button {
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  height: 36px;
+  width: 36px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.date {
+  align-self: flex-end;
+  margin-left: 10px;
+}
+
+.flag {
+  align-self: flex-end;
+  margin-left: 10px;
+}
+
+
+.reminder-card {
+  align-self: flex-start;
+  border-radius: 4px;
+  border: 1px solid black;
+  background-color: white;
+  height: 20px;
+  width: 420px;
+  padding: 16px;
+  transition: all 0.2s ease-in-out;
+  font-size: 20px;
+  font-family: Arial;
+}
+
+.reminder-card:hover {
+  transform: translateY(-3px);
 }
