--- a/frontend/src/app/reminder/reminder.component.scss
+++ b/frontend/src/app/reminder/reminder.component.scss
@@ -15,6 +15,12 @@
   width: 36px;
   margin-top: auto;
   margin-bottom: auto;
+  transition: 0.1s;
+  transition-timing-function: ease-in-out;
+}
+
+.reminder button:hover {
+  transform: translateY(-4px);
 }
 
 .date {
