--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -1,4 +1,3 @@
-<div class="bb">
 <div id="board">
     <div class="overview">
         <div class="filter-container">
@@ -11,7 +10,13 @@
         </div>
 
         <div class="list-container">
-            <div class="list-card" *ngFor="let list of board.lists"><input type="text" maxlength="18" [(ngModel)]="list.title"/><button ><img src="/assets/editicon.svg"/></button></div>
+            <div class="list-element" *ngFor="let list of board.lists">
+                <div class="list-card">
+                    <input type="text" maxlength="18" [(ngModel)]="list.title"/>
+                    <button ><img src="/assets/editicon.svg"/></button>
+                </div>
+                <button class="delete-button">test</button>
+            </div>
             <button class="plus-btn"><img src="/assets/plus.png"/></button>
         </div>
     </div>
@@ -41,5 +46,4 @@
 <!--    </div>-->
 
 
-</div>
 </div>
