--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -1,13 +1,12 @@
 
 #board {
-  margin: 15% auto;
-  height: 300px;
-  width:100%;
   background: transparent;
   color: #000000;
   font-family: Arial;
   display: flex;
   flex-direction: row;
+  width: max-content;
+  height: max-content;
 }
 
 no-padding {
@@ -74,13 +73,19 @@ no-padding {
   align-items: center;
 }
 
+.list-element {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  margin-bottom: 20px;
+}
+
 .list-card {
   border-radius: 4px;
   border: 1px solid black;
   background-color: white;
   height: 20px;
   width: 280px;
-  margin-bottom: 20px;
   padding: 16px;
   display: flex;
   flex-direction: row;
@@ -110,6 +115,21 @@ no-padding {
 
 .list-card button:hover {
   transform: translateY(-2px);
+}
+
+.delete-button {
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  height: 36px;
+  width: 36px;
+  margin: auto 5px auto 15px;
+  transition: 0.1s;
+  transition-timing-function: ease-in-out;
+}
+
+.delete-button:hover {
+  transform: translateY(-4px);
 }
 
 .round-button {
