--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -39,6 +39,7 @@ no-padding {
   margin-right: 20px;
   width: 165px;
 
+
   img {
     width: 30px;
     margin: 0 10px;
@@ -61,6 +62,8 @@ no-padding {
 
   button:hover {
     transform: translateY(-4px);
+    //box-shadow: 10px 5px 5px black;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
 }
 
