adjusted filter buttons and delete button

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -2,10 +2,14 @@
     <div class="overview">
         <div class="filter-container">
             <div class="filter-button">
-                <button><img src="/assets/today.png"/>Today<sup> 2 </sup></button>
+                <img src="/assets/today.png"/>
+                <div class="filter-text">Today</div>
+                <div class="filter-counter">2</div>
             </div>
             <div class="filter-button">
-                <button><img src="/assets/mark.png"/>Flagged <sup> 2 </sup></button>
+                <img src="/assets/mark.png"/>
+                <div class="filter-text">Today</div>
+                <div class="filter-counter">2</div>
             </div>
         </div>
 
