--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -2,4 +2,5 @@
     <input class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
     <button class="date">test</button>
     <button class="flag">test</button>
+    <button class="flag">test</button>
 </div>
