added shadow (Valerie)

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="filter-button">
                 <img src="/assets/mark.png"/>
-                <div class="filter-text">Today</div>
+                <div class="filter-text">Flagged</div>
                 <div class="filter-counter">2</div>
             </div>
         </div>
