--- a/frontend/src/app/reminder/reminder.component.scss
+++ b/frontend/src/app/reminder/reminder.component.scss
@@ -17,6 +17,7 @@
   margin-bottom: auto;
   transition: 0.1s;
   transition-timing-function: ease-in-out;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .reminder button:hover {
