--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -39,7 +39,7 @@
   padding: 5px 10px 5px 10px;
   transition: 0.1s;
   transition-timing-function: ease-in-out;
-
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   img {
     width: 30px;
     height: 30px;
@@ -130,6 +130,7 @@
   margin: auto 5px auto 15px;
   transition: 0.1s;
   transition-timing-function: ease-in-out;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .delete-button:hover {
