--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -1,6 +1,6 @@
 <div class="reminder">
     <input class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
-    <button class="date">test</button>
-    <button class="flag">test</button>
-    <button class="flag">test</button>
+    <button class="date">date</button>
+    <button class="flag">flag</button>
+    <button class="delete" (click)="onDeleteClicked()">trash</button>
 </div>
