--- a/frontend/src/app/reminder/reminder.component.scss
+++ b/frontend/src/app/reminder/reminder.component.scss
@@ -34,6 +34,10 @@
   margin-left: 10px;
 }
 
+.delete {
+  align-self: flex-end;
+  margin-left: 10px;
+}
 
 .reminder-card {
   align-self: flex-start;
@@ -46,6 +50,7 @@
   transition: all 0.2s ease-in-out;
   font-size: 20px;
   font-family: Arial;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .reminder-card:hover {
