--- a/frontend/src/app/reminder/reminder.component.scss
+++ b/frontend/src/app/reminder/reminder.component.scss
@@ -27,16 +27,25 @@
 .date {
   align-self: flex-end;
   margin-left: 10px;
+  img{
+    width: 100%;
+  }
 }
 
 .flag {
   align-self: flex-end;
   margin-left: 10px;
+  img{
+    width: 100%;
+  }
 }
 
 .delete {
   align-self: flex-end;
   margin-left: 10px;
+  img{
+    width: 100%;
+  }
 }
 
 .reminder-card {
