--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -108,6 +108,10 @@
 
 }
 
+.list-card input:hover {
+  cursor: default;
+}
+
 .list-card button {
   background-color: transparent;
   border: none;
