--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -16,7 +16,7 @@
         <div class="list-container">
             <div class="list-element" *ngFor="let list of board.lists; let i = index">
                 <div class="list-card" (click)="onListCardClicked(list)">
-                    <input id="{{'title-input'+i}}" type="text" maxlength="18" readonly="readonly" (blur)="disableInput(i)" [(ngModel)]="list.title"/>
+                    <input id="{{'title-input'+i}}" type="text" maxlength="18" (blur)="focusOutTitleInput(i)" [(ngModel)]="list.title"/>
                     <button (click)="onEditClicked(i, $event)"><img src="/assets/edit.png"/></button>
                 </div>
                 <button class="delete-button" (click)="onDeleteClicked(list)"> <img src="/assets/trash.png"/></button>
