--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -10,7 +10,7 @@
 }
 
 .overview {
-  width: 400px;
+  width: max-content;
   margin-right: 100px;
   border: 1px black solid;
   border-radius: 10px;
@@ -75,6 +75,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 420px;
 }
 
 .list-element {
@@ -165,5 +166,18 @@
 
 .plus-btn:hover {
   transform: translateY(-4px);
+}
+
+.rounded {
+  height: 27px;
+  width: 30px;
+  border: 1px solid black;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 3px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
 }
 
