--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -1,9 +1,9 @@
 <div class="reminder">
     <input #title class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
 <!--    <button class="date"><img src="/assets/calendar.png"/></button>-->
-    <input #date class="date-card" type="date" min="" onfocus="this.min=new Date().toISOString().split('T')[0]" (blur)="updateDate()"/>
-    <button class="flag" (click)="onFlagClicked()"><img #flag src="/assets/markFalse.png"/></button>
-    <button class="delete" (click)="onDeleteClicked()"><img src="/assets/check.png"/></button>
+    <input #date class="reminder-button date-card" type="date" min="" onfocus="this.min=new Date().toISOString().split('T')[0]" (blur)="updateDate()"/>
+    <button #flagbtn class="reminder-button flag false" (click)="onFlagClicked()"><img #flag src="/assets/markFalse.png"/></button>
+    <button class="reminder-button delete" (click)="onDeleteClicked()"><img src="/assets/check.png"/></button>
 
 </div>
 
