More buttons hover border adjustments

--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -37,7 +37,7 @@
   border: 1px black solid;
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
-  transition: 0.1s;
+  transition: 0.2s;
   transition-timing-function: ease-in-out;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   img {
@@ -47,15 +47,20 @@
   }
 }
 
+.filter-button:hover {
+  transform: translateY(-6px);
+  border: 3px solid #01d0ff;
+  margin: -2px;
+  cursor: default;
+}
+
 .filter-text {
   font-family: Arial;
   font-size: 20px;
   margin: auto 0 auto 5px;
 }
 
-.filter-button:hover {
-  transform: translateY(-4px);
-}
+
 
 .filter-counter {
   height: 27px;
@@ -149,6 +154,7 @@
 
 .delete-button:hover {
   transform: translateY(-4px);
+  border: 3px solid red;
 }
 
 
