--- a/frontend/src/app/reminder/reminder.component.html
+++ b/frontend/src/app/reminder/reminder.component.html
@@ -1,7 +1,7 @@
 <div class="reminder">
     <input #title class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
 <!--    <button class="date"><img src="/assets/calendar.png"/></button>-->
-    <input #date class="reminder-button date-card" type="date" min="" onfocus="this.min=new Date().toISOString().split('T')[0]" (blur)="updateDate()"/>
+    <input #date class="reminder-button date-card" type="date" min="" onfocus="this.min=new Date().toISOString().split('T')[0]" [(ngModel)]="reminder.date" (change)="updateDate()"/>
     <button #flagbtn class="reminder-button flag false" (click)="onFlagClicked()"><img #flag src="/assets/markFalse.png"/></button>
     <button class="reminder-button delete" (click)="onDeleteClicked()"><img src="/assets/check.png"/></button>
 
