implemented the function for deleting in Filterlists.

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div *ngIf="currentList">
-        <app-list [list]="this.currentList" [showAddButton]="showAddButton"></app-list>
+        <app-list [list]="this.currentList" [isFilterList]="isFilterList" (reminderDeleted)="deleteReminder($event)"></app-list>
     </div>
 
 </div>
