implemented initial loadBoard()

--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -1,4 +1,4 @@
-<div id="board">
+<div id="board" *ngIf="board">
     <div class="overview">
         <div class="filter-container">
             <div class="filter-button" (click)="onTodayClicked()">
