--- a/frontend/src/lib/feature/list/list.component.html
+++ b/frontend/src/lib/feature/list/list.component.html
@@ -4,8 +4,8 @@
         <div class="rounded">{{list.reminders.length}}</div>
     </div>
     <div class="reminder-container">
-        <app-reminder *ngFor="let reminder of list.reminders" [reminder]="reminder" (deleteClicked)="onDeleteClicked($event)">
-        </app-reminder>
+        <reminder *ngFor="let reminder of list.reminders" [reminder]="reminder" (deleteClicked)="onDeleteClicked($event)">
+        </reminder>
         <button class="plus-btn" *ngIf="!isFilterList" (click)="onPlusClicked()"><img src="/assets/plus.png"/></button>
     </div>
 </div>
