--- a/frontend/src/lib/feature/list/list.component.scss
+++ b/frontend/src/lib/feature/list/list.component.scss
@@ -3,7 +3,7 @@
   background-color: transparent;
   border: 1px solid black;
   border-radius: 10px;
-  width: 600px;
+  width: max-content;
   padding: 20px 20px 20px 20px;
   display: flex;
   flex-direction: column;
@@ -16,43 +16,20 @@
   justify-content: space-between;
 }
 
-.rounded {
-  height: 27px;
-  width: 30px;
-  border: 1px solid black;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 20px;
-  padding-top: 3px;
-  margin-right: 10px;
-}
-
 .title-text {
   font-size: 30px;
   font-weight: bold;
   margin-left: 20px;
 }
 
+.counter {
+  margin-right: 10px;
+}
+
 .reminder-container {
   margin-top: 20px;
-  width: 580px;
+  width: 640px;
   display: flex;
   flex-direction: column;
-}
-
-.plus-btn {
-  color: black;
-  background-color: transparent;
-  border: none;
-  margin: 0 auto;
-  transition: 0.1s;
-  transition-timing-function: ease-in-out;
-  width: 30px;
-  img {
-    width: 30px;
-  }
-}
-
-.plus-btn:hover {
-  transform: translateY(-4px);
+  align-items: center;
 }
