--- a/frontend/src/lib/feature/board/board.component.scss
+++ b/frontend/src/lib/feature/board/board.component.scss
@@ -60,18 +60,14 @@
   margin: auto 0 auto 5px;
 }
 
-
-
-.filter-counter {
-  height: 27px;
-  width: 30px;
-  border: 1px solid black;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 20px;
-  padding-top: 3px;
-  margin: auto 0 auto 5px;
+.counter {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  width: max-content;
+  height: max-content;
 }
+
 
 .list-container {
   border: 1px black solid;
@@ -157,33 +153,4 @@
   border: 3px solid red;
 }
 
-
-.plus-btn {
-  color: black;
-  background-color: transparent;
-  border: none;
-  transition: 0.1s;
-  transition-timing-function: ease-in-out;
-  width: 30px;
-  img {
-    width: 30px;
-  }
-}
-
-.plus-btn:hover {
-  transform: translateY(-4px);
-}
-
-.rounded {
-  height: 27px;
-  width: 30px;
-  border: 1px solid black;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 20px;
-  padding-top: 3px;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 10px;
-}
 
