--- a/frontend/src/lib/feature/reminder/reminder.component.scss
+++ b/frontend/src/lib/feature/reminder/reminder.component.scss
@@ -4,8 +4,27 @@
   margin-bottom: 20px;
   display: flex;
   flex-direction: row;
-
+  align-items: flex-start;
 }
+
+.reminder-card {
+  align-self: flex-start;
+  border-radius: 4px;
+  border: 1px solid black;
+  background-color: white;
+  height: 20px;
+  width: 300px;
+  padding: 16px;
+  transition: all 0.2s ease-in-out;
+  font-size: 20px;
+  font-family: Arial;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.reminder-card:hover {
+  transform: translateY(-3px);
+}
+
 
 .reminder-button {
   background-color: transparent;
@@ -32,6 +51,28 @@
   }
 }
 
+.date-card{
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  height: 36px;
+  width: 180px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  transition: 0.1s;
+  transition-timing-function: ease-in-out;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.date-card:hover {
+  transform: translateY(-4px);
+  border: 3px solid #01d0ff;
+  margin-left: 6px;
+}
+
+
+
 .flag {
   align-self: flex-end;
   margin-left: 10px;
@@ -53,9 +94,9 @@
   border-color: red;
 }
 
+
 .delete {
   color: black;
-  align-self: flex-end;
   margin-left: 10px;
   margin-right: 10px;
   img{
@@ -65,42 +106,6 @@
 
 .delete:hover {
   border: 3px solid lawngreen;
-
 }
 
-.reminder-card {
-  align-self: flex-start;
-  border-radius: 4px;
-  border: 1px solid black;
-  background-color: white;
-  height: 20px;
-  width: 420px;
-  padding: 16px;
-  transition: all 0.2s ease-in-out;
-  font-size: 20px;
-  font-family: Arial;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
 
-.reminder-card:hover {
-  transform: translateY(-3px);
-}
-
-.date-card{
-  background-color: transparent;
-  border: 1px solid black;
-  border-radius: 5px;
-  height: 36px;
-  width: 180px;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 10px;
-  transition: 0.1s;
-  transition-timing-function: ease-in-out;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-.date-card:hover {
-  transform: translateY(-4px);
-  border: 3px solid #01d0ff;
-}
