--- a/frontend/src/lib/feature/list-element/list-element.component.html
+++ b/frontend/src/lib/feature/list-element/list-element.component.html
@@ -1,8 +1,26 @@
 <div class="list-element">
-    <div class="list-card" (click)="onListCardClicked()">
-        <input #title type="text" maxlength="18" (blur)="focusOut()" [focusMe]="true" [(ngModel)]="list.title"/>
-        <button (click)="onEditClicked($event)"><img src="/assets/edit.png"/></button>
+    <div class="list-card"
+         (click)="triggerClick()">
+        <input #title
+               type="text"
+               maxlength="18"
+               (blur)="focusOut()"
+               (change)="triggerUpdate()"
+               [focusMe]="true"
+               [(ngModel)]="list.title"/>
+
+        <button
+                (click)="editTitle($event)">
+            <img src="/assets/edit.png"/>
+        </button>
     </div>
-    <counter class="counter" [count]="list.reminders.length"></counter>
-    <button class="delete-button" (click)="onDeleteClicked()"><img src="/assets/trash.png"/></button>
+
+    <counter class="counter"
+             [count]="list.reminders.length">
+    </counter>
+
+    <button class="delete-button"
+            (click)="triggerDelete()">
+        <img src="/assets/trash.png"/>
+    </button>
 </div>
