--- a/frontend/src/lib/feature/reminder/reminder.component.html
+++ b/frontend/src/lib/feature/reminder/reminder.component.html
@@ -1,9 +1,27 @@
 <div class="reminder">
-    <input #title class="reminder-card" type="text" [(ngModel)]="reminder.title"/>
-<!--    <button class="date"><img src="/assets/calendar.png"/></button>-->
-    <input #date class="reminder-button date-card" type="date" min="" onfocus="this.min=new Date().toISOString().split('T')[0]" [(ngModel)]="reminder.date" (change)="updateDate()"/>
-    <button #flagbtn class="reminder-button flag false" (click)="onFlagClicked()"><img #flag src="/assets/markFalse.png"/></button>
-    <button class="reminder-button delete" (click)="onDeleteClicked()"><img src="/assets/check.png"/></button>
+    <input #title
+           class="reminder-card"
+           type="text"
+           (change)="triggerUpdate()"
+           [(ngModel)]="reminder.title"/>
+
+    <input #date
+           class="reminder-button date-card"
+           type="date"
+           min=""
+           onfocus="this.min=new Date().toISOString().split('T')[0]"
+           (change)="triggerUpdate()"
+           [(ngModel)]="reminder.date"/>
+
+    <button #flagbtn
+            class="reminder-button flag false"
+            (click)="toggleFlag()">
+            <img #flag src="/assets/markFalse.png"/>
+    </button>
+
+    <button class="reminder-button delete" (click)="triggerDelete()">
+        <img src="/assets/check.png"/>
+    </button>
 
 </div>
 
